<?xml version="1.0"?>
<package format="2">
  <name>obstacle-avoidance-turtlebot</name>
  <version>0.0.0</version>
  <description>This package implements obstacle avoidance for Turtlebot 3 using planar laser range-finder.</description>

  <maintainer email="abhijay@umd.edu">Abhijay Singh</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
